# bevy_shader_playground

./: .clang-format  404.html  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  index.html  print.html  rustfmt.toml  searchindex.js  searchindex.json
.cargo/: config.toml
.github/workflows/: design-book.yml
assets/shaders/: game_of_life.wgsl
bevy_gol_example/: index.html  part_1.html  part_2.html  part_3.html  part_4.html  part_5.html
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/bevy_gol_example/: README.md  part_1.md  part_2.md  part_3.md  part_4.md  part_5.md
docs/src/macros/: macros.tera
sims/bevy_sand/: Cargo.toml
sims/bevy_sand/assets/shaders/: color.wgsl  draw.wgsl
sims/bevy_sand/assets/shaders/empty/: fall_empty.wgsl  horizontal_empty.wgsl  rise_empty.wgsl  slide_down_empty.wgsl
sims/bevy_sand/assets/shaders/swap/: fall_swap.wgsl  horizontal_swap.wgsl  rise_swap.wgsl  slide_down_swap.wgsl
sims/bevy_sand/src/: camera.rs  constants.rs  input.rs  lib.rs  main.rs  pipeline.rs  pipeline_assets.rs  settings.rs  ui.rs  utils.rs
sims/bevy_sand/src/shaders/: core.wgsl  dir.wgsl  matter.wgsl  query.wgsl
sims/game_of_life_sim/: Cargo.toml  index.html
sims/game_of_life_sim/assets/shaders/: color.wgsl  draw.wgsl  game_of_life.wgsl
sims/game_of_life_sim/src/: camera.rs  image.rs  input.rs  lib.rs  main.rs  pipeline.rs  ui.rs  utils.rs
sims/game_of_life_sim/src/pipeline/: automata.rs  color.rs  draw.rs
sims/game_of_life_sim/src/shaders/: core.wgsl
